--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -47,7 +47,7 @@
                 android:elevation="2dp"
                 android:orientation="horizontal"
                 android:padding="@dimen/space_16"
-                tools:visibility="gone">
+                tools:visibility="visible">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="60dp"
