--- a/supportcompactlibrary/src/main/res/values/dimens.xml
+++ b/supportcompactlibrary/src/main/res/values/dimens.xml
@@ -24,4 +24,17 @@
     <dimen name="space_12">12dp</dimen>
     <dimen name="default_stroke_width">2dp</dimen>
     <dimen name="default_background_stroke_width">3dp</dimen>
+
+    <!--  ICON  -->
+    <dimen name="pdlg_icon_size">43.2dp</dimen>
+    <dimen name="pdlg_border_size">3.6dp</dimen>
+    <!--  DIALOG  -->
+    <dimen name="pdlg_corner_radius">7.2dp</dimen>
+    <!--  TEXTS  -->
+    <dimen name="pdlg_tv_title">16.2sp</dimen>
+    <dimen name="pdlg_tv_message">14.4sp</dimen>
+    <!--  BUTTON  -->
+    <dimen name="pdlg_button_stroke">1.8dp</dimen>
+    <!--  SPACING  -->
+    <dimen name="pdlg_space_1.0x">10.8dp</dimen>
 </resources>
