--- a/app/src/main/res/drawable/bg_get_pro_sky.xml
+++ b/app/src/main/res/drawable/bg_get_pro_sky.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/bg_pro_sky"/>
-    <corners android:radius="@dimen/_6sdp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
+        android:startColor="#CCA955"
+        android:centerColor="#F6EEBE"
+        android:endColor="#CCA955"
+        android:angle="0" />
+
+    <corners android:radius="24dp" />
 </shape>
