--- a/app/src/main/res/layout/fragment_confirm_order.xml
+++ b/app/src/main/res/layout/fragment_confirm_order.xml
@@ -16,13 +16,57 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvOrders"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/clOrder"
             android:clipToPadding="false"
             android:paddingTop="@dimen/default_space"
             app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:context=".module.confirmorder.ConfirmOrderFragment"
             tools:listitem="@layout/row_confirm_order" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clOrder"
+            android:paddingTop="@dimen/default_space"
+            android:paddingBottom="@dimen/default_space"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_marginBottom="@dimen/default_space"
+                android:layout_marginStart="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
+                android:id="@+id/btnGetTPro"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@+id/btnPlaceOrder"
+                android:background="@drawable/bg_get_pro_sky"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Get Tarrakki Pro at 275 per month"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@color/black"
+                android:fontFamily="@font/lato_bold"
+                android:textSize="@dimen/_12ssp"
+                android:gravity="center" />
+
+
+            <Button
+                android:id="@+id/btnPlaceOrder"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
+                android:background="@drawable/shape_btn_idle_bg"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/place_order"
+                android:textColor="@color/white"
+                tools:text="@string/place_order" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <ImageView
@@ -34,7 +78,7 @@
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible"/>
+            tools:visibility="gone"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
