--- a/app/src/main/res/layout/row_confirm_order.xml
+++ b/app/src/main/res/layout/row_confirm_order.xml
@@ -57,33 +57,37 @@
             android:id="@+id/tvSIPLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_16"
+            android:layout_marginTop="@dimen/_10sdp"
             android:background="@drawable/shape_edt_gray_round"
             android:paddingStart="@dimen/space_12"
             android:paddingTop="@dimen/space_4"
             android:paddingEnd="@dimen/space_12"
             android:paddingBottom="@dimen/space_4"
-            android:text="@{widget.title}"
+            android:text="@string/sip"
             android:textAllCaps="true"
+            android:textColor="@color/black"
+            android:visibility="@{widget.hasSIP}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvName"
+            app:layout_constraintTop_toBottomOf="@+id/viewDivider"
             tools:text="@string/sip" />
 
         <TextView
             android:id="@+id/tvSIP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
             android:fontFamily="@string/returns_sysmbol"
             android:paddingStart="@dimen/space_4"
             android:paddingEnd="@dimen/space_4"
             android:text="@{widget.amount}"
             android:textAllCaps="true"
+            android:textSize="@dimen/_10ssp"
+            android:visibility="@{widget.hasSIP}"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvSIPLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tvSIPLabel"
+            app:layout_constraintBottom_toBottomOf="@id/tvSIPLabel"
             tools:text="@string/dummy3" />
 
         <TextView
@@ -97,7 +101,7 @@
             android:textColor="@color/black"
             android:visibility="@{widget.hasSIP}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvSIP"
+            app:layout_constraintTop_toBottomOf="@+id/tvSIPLabel"
             tools:text="Start Date:" />
 
         <TextView
@@ -108,11 +112,12 @@
             android:layout_marginTop="@dimen/space_8"
             android:gravity="start"
             android:text="@{widget.startDate}"
+            android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:visibility="@{widget.hasSIP}"
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
             app:layout_constraintStart_toEndOf="@id/tvDateL"
-            app:layout_constraintTop_toBottomOf="@+id/tvSIP"
+            app:layout_constraintTop_toBottomOf="@+id/tvSIPLabel"
             tools:text="30/03/2019" />
 
         <CheckBox
@@ -121,7 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_4"
             android:layout_marginTop="@dimen/space_8"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/space_8"
             android:button="@drawable/selector_check_box_gray"
             android:checked="@{widget.firstInstallmentSIP}"
             android:fontFamily="@font/lato_semibold"
@@ -132,7 +137,6 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/darker_gray"
             android:visibility="@{widget.hasSIP}"
-            app:layout_constraintEnd_toStartOf="@+id/guideline6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvDateL"
             tools:checked="true" />
@@ -276,9 +280,10 @@
             android:paddingBottom="@dimen/space_4"
             android:text="@string/lumpsum"
             android:textAllCaps="true"
+            android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:visibility="@{widget.haveSIPAndLumpsum}"
-            app:layout_constraintStart_toStartOf="@id/tvLumpsumAmount"
+            android:visibility="@{widget.hasLumpsum}"
+            app:layout_constraintStart_toStartOf= "parent"
             app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
         <TextView
@@ -286,28 +291,26 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/space_8"
             android:fontFamily="@string/returns_sysmbol"
-            android:paddingStart="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_8sdp"
             android:text="@{widget.lumpsumAmount}"
             android:textAllCaps="true"
+            android:textSize="@dimen/_10ssp"
+            app:layout_constraintBottom_toBottomOf="@+id/tvLumpsumLabel"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
-            android:visibility="@{widget.haveSIPAndLumpsum}"
+            android:visibility="@{widget.hasLumpsum}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/guideline6"
-            app:layout_constraintTop_toBottomOf="@+id/tvSIPLabel"
+            app:layout_constraintTop_toTopOf="@+id/tvLumpsumLabel"
             tools:text="@string/dummy3" />
 
         <View
-            android:layout_width="1dp"
-            android:layout_height="0dp"
+            android:id="@+id/viewDivider"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
             android:background="@color/darker_gray"
             android:visibility="@{widget.haveSIPAndLumpsum}"
-            app:layout_constraintBottom_toBottomOf="@id/cbSIP"
-            app:layout_constraintEnd_toStartOf="@id/guideline6"
-            app:layout_constraintTop_toTopOf="@id/tvLumpsumLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/tvLumpsumLabel"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
