--- a/app/src/main/res/layout/row_order_total.xml
+++ b/app/src/main/res/layout/row_order_total.xml
@@ -35,9 +35,10 @@
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:paddingBottom="@dimen/_70sdp"
+            android:textSize="@dimen/_10ssp"
+            android:paddingBottom="@dimen/_20sdp"
             android:visibility="@{widget.isTarrakkiPro()?View.GONE:View.VISIBLE}"
-            tools:text="(You have Two free recommendations left)"
+            tools:text="(You have Two free reviews left)"
             android:text="@{widget.recommendationLeft}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black" />
@@ -55,6 +56,8 @@
                 android:id="@+id/tvTotalL"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_regular"
+                android:textColor="@color/black"
                 android:layout_marginEnd="@dimen/space_8"
                 android:text="@string/total_amount_payable"
                 app:layout_constraintEnd_toStartOf="@id/tvTotal"
@@ -76,28 +79,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_16"
+                android:textColor="@color/black"
                 android:text="@string/sip_bank_mandate"
                 android:visibility="@{widget.isBankMandateVisible?View.VISIBLE:View.GONE}"
-                app:layout_constraintBaseline_toBaselineOf="@id/tvBankMandateAccount"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvTotalL" />
 
             <TextView
+                android:layout_marginTop="@dimen/_4sdp"
                 android:id="@+id/tvBankMandateAccount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginTop="@dimen/space_16"
-                android:drawableEnd="@drawable/ic_bank_mandate_edit"
-                android:gravity="center_vertical|end"
+                android:drawableEnd="@drawable/ic_edit_bank_mandate_new"
+                android:gravity="center_vertical|start"
                 android:onClick="@{onBankMandateChange}"
                 android:text="@{widget.bank}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/colorAccent"
                 android:visibility="@{widget.isBankMandateVisible?View.VISIBLE:View.GONE}"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/tvMandate"
-                app:layout_constraintTop_toBottomOf="@id/tvTotalL"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvMandate"
                 tools:text="ICICI Bank" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -127,8 +128,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
-            android:visibility="@{widget.isTarrakkiPro()?View.GONE:View.VISIBLE}"
-            android:onClick="@{onTarrakkiProClick}"
+            android:visibility="gone"
             android:text="Get Tarrakki Pro at 275 per month"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
