--- a/supportcompactlibrary/src/main/res/layout/pdlg_layout.xml
+++ b/supportcompactlibrary/src/main/res/layout/pdlg_layout.xml
@@ -65,9 +65,8 @@
         android:background="@drawable/background_dialog_icon"
         android:orientation="vertical">
 
-        <view
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_icon"
-            class="org.supportcompact.prettydialog.PrettyDialog$PrettyDialogCircularImageView"
             android:layout_width="@dimen/pdlg_icon_size"
             android:layout_height="@dimen/pdlg_icon_size"
             android:layout_margin="@dimen/pdlg_border_size"
