--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -273,13 +273,13 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
+                    android:layout_marginStart="@dimen/_5sdp"
                     android:id="@+id/ivRiskLbl"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_16sdp"
                     android:adjustViewBounds="true"
                     android:padding="@dimen/_2sdp"
-                    android:src="@drawable/ic_fund_riskometer_bg_temp"
+                    android:src="@drawable/risk_meter_new"
                     app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
                 <com.tarrakki.speedometer.SpeedView
@@ -287,7 +287,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_16sdp"
-                    android:layout_marginTop="@dimen/_16sdp"
+                    android:layout_marginTop="@dimen/_28sdp"
                     android:layout_marginEnd="@dimen/_16sdp"
                     app:layout_constraintTop_toTopOf="@id/ivRiskLbl"
                     app:riskLevel="@{fund.riskProgress}"
