Remove 199 charge for TZ debit card

--- a/app/src/main/res/layout/fragment_debit_cart_info.xml
+++ b/app/src/main/res/layout/fragment_debit_cart_info.xml
@@ -42,7 +42,7 @@
                     android:layout_height="match_parent"
                     android:padding="@dimen/_8sdp"
                     tools:text="@string/debit_cart_info"
-                    android:text="@{@string/debit_cart_info(vm.addressAmountData.data.cashfreeAmount)}"
+                    android:text="@string/debit_cart_info"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
                 <Button
