GIF use for splash screen, Login intro view size change

--- a/app/src/main/res/layout/activity_new_login.xml
+++ b/app/src/main/res/layout/activity_new_login.xml
@@ -33,7 +33,7 @@
             <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
                 android:id="@+id/pager_intro"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
 
             <me.relex.circleindicator.CircleIndicator
                 android:id="@+id/pageIndicator"
