--- a/app/src/main/res/layout/layout_login_introducation_item.xml
+++ b/app/src/main/res/layout/layout_login_introducation_item.xml
@@ -21,7 +21,7 @@
             android:id="@+id/imageView"
             imgUrl="@{vm.image}"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_180sdp"
+            android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
