--- a/app/src/main/res/layout/activity_new_login.xml
+++ b/app/src/main/res/layout/activity_new_login.xml
@@ -38,7 +38,7 @@
             <me.relex.circleindicator.CircleIndicator
                 android:id="@+id/pageIndicator"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_height="@dimen/_35sdp"
                 android:layout_alignParentBottom="true"
                 app:ci_drawable="@drawable/intro_page_selected_new"
                 app:ci_drawable_unselected="@drawable/intro_page_selected" />
@@ -47,6 +47,7 @@
 
 
         <EditText
+            app:layout_constraintVertical_chainStyle="packed"
             android:id="@+id/etEmail"
             android:paddingTop="@dimen/_10sdp"
             android:paddingBottom="@dimen/_10sdp"
@@ -64,6 +65,7 @@
             android:background="@drawable/bg_edit_text_corner"
             app:layout_constraintStart_toStartOf="@+id/btnContinue"
             app:layout_constraintEnd_toEndOf="@+id/btnContinue"
+            app:layout_constraintTop_toBottomOf="@+id/guideline5"
             app:layout_constraintBottom_toTopOf="@+id/btnContinue"
             android:layout_marginBottom="@dimen/_12sdp"
             android:layout_width="0dp"
@@ -71,6 +73,7 @@
 
 
         <TextView
+            app:layout_constraintTop_toBottomOf="@+id/etEmail"
             android:id="@+id/btnContinue"
             android:text="@string/continues"
             android:textColor="@color/white"
@@ -112,6 +115,7 @@
 
 
         <TextView
+            app:layout_constraintTop_toBottomOf="@+id/btnContinue"
             android:id="@+id/tvOr"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -125,6 +129,7 @@
             android:layout_height="wrap_content"/>
 
         <androidx.cardview.widget.CardView
+            app:layout_constraintTop_toBottomOf="@+id/tvOr"
             android:id="@+id/cardGoogle"
             android:layout_marginBottom="@dimen/_16sdp"
             app:layout_constraintStart_toStartOf="parent"
@@ -147,6 +152,7 @@
 
 
         <TextView
+            app:layout_constraintTop_toBottomOf="@+id/cardGoogle"
             android:id="@+id/tvTermsConditions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -161,7 +167,16 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     </ScrollView>
 
 </layout>
