--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,11 +5,11 @@
     android:id="@+id/clMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash"
     tools:context=".module.splash.SplashActivity" >
 
     <androidx.appcompat.widget.AppCompatImageView
         android:visibility="gone"
+        android:scaleType="fitXY"
         android:id="@+id/videoSplash"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
