--- a/app/src/main/res/layout/layout_login_introducation_item.xml
+++ b/app/src/main/res/layout/layout_login_introducation_item.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="vm"
             type="com.tarrakki.module.login.NewLoginVM.LoginIntroduction" />
@@ -13,7 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/_20sdp">
 
@@ -21,11 +20,13 @@
             android:id="@+id/imageView"
             imgUrl="@{vm.image}"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/_150sdp"
             android:layout_gravity="center_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView2"
             tools:src="@drawable/tarrakki_zyaada_card" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -33,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
-            android:textSize="@dimen/_14ssp"
+            android:textSize="@dimen/_13ssp"
             android:fontFamily="@font/poppins_medium"
             android:gravity="center_horizontal"
             android:text="@{vm.title}"
@@ -41,6 +42,7 @@
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
             tools:text="Get a FREE mutual fund investment linked VISA debit card" />
 
