Minor UI changed, Resend OTP API changed, Resend OTP gray-black out, OTP erase focus manage

--- a/app/src/main/res/layout/activity_set_password.xml
+++ b/app/src/main/res/layout/activity_set_password.xml
@@ -51,7 +51,7 @@
                 android:paddingEnd="@dimen/_20sdp"
                 android:paddingBottom="@dimen/_10sdp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/black"
+                android:textColor="@color/light_black"
                 android:textColorHint="@color/auto_cancel"
                 android:textSize="@dimen/_12ssp"
                 app:layout_constraintTop_toBottomOf="@+id/ivBack" />
