--- a/app/src/main/res/drawable/line_gray_new.xml
+++ b/app/src/main/res/drawable/line_gray_new.xml
@@ -10,7 +10,7 @@
         <shape>
             <stroke
                 android:width="1.5dp"
-                android:color="@color/light_black" />
+                android:color="@color/border_gray" />
         </shape>
     </item>
 </layer-list>
