--- a/app/src/main/res/layout/activity_enter_mobile_number.xml
+++ b/app/src/main/res/layout/activity_enter_mobile_number.xml
@@ -52,7 +52,7 @@
                 android:paddingEnd="@dimen/_5sdp"
                 android:paddingBottom="@dimen/_10sdp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/black"
+                android:textColor="@color/light_black"
                 android:textColorHint="@color/auto_cancel"
                 android:textSize="@dimen/_12ssp"
                 app:layout_constraintTop_toBottomOf="@+id/ivBack" />
