--- a/app/src/main/res/layout/activity_new_login.xml
+++ b/app/src/main/res/layout/activity_new_login.xml
@@ -58,7 +58,7 @@
             android:inputType="text"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textSize="@dimen/_11ssp"
-            android:textColor="@color/black"
+            android:textColor="@color/light_black"
             android:fontFamily="@font/poppins"
             android:textColorHint="@color/auto_cancel"
             android:hint="@string/enter_your_email_or_mobile"
@@ -94,7 +94,7 @@
         <View
             android:id="@+id/viewLeft"
             android:layout_marginEnd="@dimen/_10sdp"
-            android:background="@color/darker_gray"
+            android:background="#B7B7B7"
             app:layout_constraintTop_toTopOf="@id/tvOr"
             app:layout_constraintBottom_toBottomOf="@+id/tvOr"
             app:layout_constraintEnd_toStartOf="@+id/tvOr"
@@ -104,7 +104,7 @@
         <View
             android:id="@+id/viewRight"
             android:layout_marginStart="@dimen/_10sdp"
-            android:background="@color/darker_gray"
+            android:background="#B7B7B7"
             app:layout_constraintTop_toTopOf="@id/tvOr"
             app:layout_constraintBottom_toBottomOf="@+id/tvOr"
             app:layout_constraintStart_toEndOf="@+id/tvOr"
@@ -122,37 +122,27 @@
             android:text="@string/or"
             android:layout_marginBottom="@dimen/_12sdp"
             android:fontFamily="@font/poppins_semibold"
-            android:textColor="@color/black"
+            android:textColor="@color/light_black"
             android:textSize="@dimen/_13ssp"
-            app:layout_constraintBottom_toTopOf="@+id/cardGoogle"
+            app:layout_constraintBottom_toTopOf="@+id/ivGoogle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <androidx.cardview.widget.CardView
-            app:layout_constraintTop_toBottomOf="@+id/tvOr"
-            android:id="@+id/cardGoogle"
-            android:layout_marginBottom="@dimen/_16sdp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/tvTermsConditions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/ivGoogle"
                 android:src="@drawable/ic_google_login_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginBottom="@dimen/_16sdp"
+                app:layout_constraintTop_toBottomOf="@+id/tvOr"
                 app:layout_constraintBottom_toTopOf="@+id/tvTermsConditions"
                 android:layout_width="@dimen/_55sdp"
                 android:layout_height="@dimen/_55sdp"/>
 
-        </androidx.cardview.widget.CardView>
-
-
 
         <TextView
-            app:layout_constraintTop_toBottomOf="@+id/cardGoogle"
+            app:layout_constraintTop_toBottomOf="@+id/ivGoogle"
             android:id="@+id/tvTermsConditions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
