--- a/app/src/main/res/layout/activity_new_login.xml
+++ b/app/src/main/res/layout/activity_new_login.xml
@@ -164,6 +164,15 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5" />
 
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="@{vm.progressBar}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
