--- a/app/src/main/res/layout/activity_verify_mobile_number.xml
+++ b/app/src/main/res/layout/activity_verify_mobile_number.xml
@@ -223,10 +223,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_4sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/line_black"
+                android:background="@drawable/line_gray"
                 android:fontFamily="@font/poppins"
                 android:text="@string/resend"
-                android:textColor="@color/light_black"
+                android:textColor="@color/border_gray"
                 android:textSize="@dimen/_13ssp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tvNotReceiveOtp"
@@ -237,10 +237,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/line_black"
+                android:background="@drawable/line_gray"
                 android:fontFamily="@font/poppins"
                 android:text="@string/send_otp_via_call"
-                android:textColor="@color/light_black"
+                android:textColor="@color/border_gray"
                 android:textSize="@dimen/_13ssp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
