--- a/supportcompactlibrary/src/main/res/values/colors.xml
+++ b/supportcompactlibrary/src/main/res/values/colors.xml
@@ -16,4 +16,10 @@
     <color name="pdlg_color_yellow">#FFEB3B</color>
     <color name="pdlg_color_gray">#9E9E9E</color>
 
+
+    <color name="omfm_default_color">#DD2C00</color>
+    <color name="omfm_expanded_background_sample">#CCE9E9E9</color>
+    <color name="omfm_label_background_white">#FFFFFF</color>
+    <color name="omfm_label_text_black">#000000</color>
+
 </resources>
