--- a/supportcompactlibrary/src/main/res/values/styles.xml
+++ b/supportcompactlibrary/src/main/res/values/styles.xml
@@ -10,4 +10,22 @@
         <item name="android:windowExitAnimation">@null</item>
     </style>
 
+    <declare-styleable name="OneMoreFabMenu">
+        <attr name="content_options" format="reference"/>
+        <attr name="close_on_click" format="boolean"/>
+        <attr name="color_main_button" format="color"/>
+        <attr name="color_main_button_expanded" format="color"/>
+        <attr name="color_secondary_buttons" format="color"/>
+        <attr name="rotate_main_button" format="boolean"/>
+        <attr name="size_main_button" format="integer"/>
+        <attr name="size_secondary_buttons" format="integer"/>
+        <attr name="expanded_background_color" format="color"/>
+        <attr name="label_background_color" format="color"/>
+        <attr name="label_background_drawable" format="reference"/>
+        <attr name="label_text_color" format="color"/>
+        <attr name="enable_main_as_action" format="boolean"/>
+        <attr name="main_action_drawable" format="reference"/>
+        <attr name="expanded_drawable" format="reference"/>
+    </declare-styleable>
+
 </resources>
